json reader filesystem

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,10 @@
   
   async function postData() {
   // https://developer.mozilla.org/en-US/docs/web/api/fetch_API/using_fetch
-  data = {name:'daniel'};
+  data = {
+   name:'daniel',
+   age: 41
+  };
   
   const options = {
    method: 'POST',
