--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
 <body>
  <h1>TITLE</h1>
 
+ <!-- Fjern alt dette som autokøres 1 gang på index, når de andre GET og POST funktioner virker -->
  <script>
   
   async function postData() {
