--- a/views/myApi.ejs
+++ b/views/myApi.ejs
@@ -1,7 +1,15 @@
 <!-- // terminal: npm i json-server (lokalt)-->
 <!-- // terminal: npm i -g json-server (globalt)-->
 <!-- // terminal: json-server db.json (hvis installeret globalt)--> 
-<!-- // terminal: npx json-server db.json --portnummer (hvis installeret lokalt)--> 
+<!-- // terminal: npx json-server db.json --portnummer (hvis installeret lokalt)-->
+
+<!--
+Hvis json server ikke starter på korrekt port, skal der manuelt oprettes en "json-server.json" fil med exempelvis:
+{
+    "port": 8000
+}
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
