læs og skriv til json uden json-server

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,8 @@
 </head>
 <body>
  <h1>TITLE</h1>
+ <a href="form">form</a>
+ <a href="myApi">se alle</a>
 </body>
-<script src="./index.js"></script>
+<!-- <script src="./index.js"></script> -->
 </html>
