--- a/views/form.ejs
+++ b/views/form.ejs
@@ -11,8 +11,11 @@
  <!-- <form action="/some page" id="form" method="post"> -->
   <form id="myForm">  
    <!-- <label>Id:<input id="id" name="id" value="2"></label> -->
-   <label>Name:<input id="name" name="name" value="John Doe"></label>
+   <label>First name:<input id="firstname" name="firstname" value="John"></label>
+   <label>Middle name:<input id="middlename" name="middlename" value="Doe"></label>
+   <label>Surname:<input id="surname" name="surname" value="Rockefeller"></label>
    <label>Age:<input id="age" name="age" value="22"></label>
+
    <input type="submit" value="Submit">
  </form>
  <script>
