--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,10 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
+ <title><%=title%></title>
 </head>
 <body>
- <h1>TITLE</h1>
- <a href="form">form</a>
- <a href="myApi">se alle</a>
+ <%- include('nav.ejs') %>
+ <h1>Forside</h1>
 </body>
-<!-- <script src="./index.js"></script> -->
 </html>
