--- a/views/showAllStudents.ejs
+++ b/views/showAllStudents.ejs
@@ -9,13 +9,11 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
- <!-- Omdøb alt heri til "Vis alle" -->
- <title>Document</title>
+ <title><%=title%></title>
 </head>
 <body>
- <h1>API</h1>
- <div id="students"></div>
-
+ <%- include('nav.ejs') %>
+ <h1>Alle Students</h1>
  <dl>
  <% studentsData.forEach(student => { %>
   <dt>
