--- a/views/createStudentStatus.ejs
+++ b/views/createStudentStatus.ejs
@@ -4,8 +4,10 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
+ <title><%=title%></title>
 </head>
+<%- include('nav.ejs') %>
+<h1>Status</h1>
 <body>
  status: <%= studentStatus %>
 </body>
