--- a/views/getStudent.ejs
+++ b/views/getStudent.ejs
@@ -10,13 +10,11 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <!-- <script src="../public/apiResponse.js" id="data" type="application/json"></script> -->
 
- <title>Student</title>
+ <title><%=title%></title>
 </head>
 <body>
+ <%- include('nav.ejs') %>
  <h1>Student finder</h1>
- 
- <div id="students"></div>
-
  <form id="getStudentIDForm" action="http://localhost:3000/showStudent" method="POST">
   <input id="id" name="id">
   <input type="submit" value="Submit">
