--- a/views/createStudent.ejs
+++ b/views/createStudent.ejs
@@ -11,7 +11,7 @@
 <h1>Opret Student</h1>
 
   <form id="createStudentForm" action="http://localhost:3000/createStudentStatus" method="POST">  
-
+   <label>Id:<input id="id" name="id" value="1"></label>
    <label>First name:<input id="firstname" name="firstname" value="John"></label>
    <label>Middle name:<input id="middlename" name="middlename" value="Doe"></label>
    <label>Surname:<input id="surname" name="surname" value="Rockefeller"></label>
