--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -2,3 +2,4 @@
 <a href="createStudent">Opret</a>
 <a href="getStudent">Find</a>
 <a href="showAllStudents">Vis alle</a>
+<a href="deleteStudent">Slet</a>
