--- a/views/getStudent.ejs
+++ b/views/getStudent.ejs
@@ -22,7 +22,7 @@ Hvis json server ikke starter på korrekt port, skal der manuelt oprettes en "js
 </head>
 <body>
  <%- include('nav.ejs') %>
- <h1>Student finder</h1>
+ <h1>Find Student</h1>
  <form id="getStudentIDForm" action="http://localhost:3000/showStudent" method="POST">
   <input id="id" name="id">
   <input type="submit" value="Submit">
